Changed queue function button positions on mobile

--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -44,8 +44,8 @@
 
             <div class="left hide-on-med-and-up">
 
-              <div class="fixed-action-btn horizontal" style="display: inline-block; right: 24px; top: 65px;">
-                    <a md-button="floating: true; large: true;" md-tooltip="position: bottom; text: edit;" md-waves="color: light; circle: true;">
+              <div class="fixed-action-btn" style="display: inline-block; right: 30px; bottom: 35px;">
+                    <a md-button="floating: true; large: true;" md-tooltip="position: left; text: edit;" md-waves="color: light; circle: true;">
                       <i class="large material-icons">mode_edit</i>
                     </a>
                     <ul>
